# armis-mcp-test

./: .env.example  .gitignore  README.md  app.py  config.py  history.py  llm.py  main.py  mcp_client.py  prompts.py  pyproject.toml
.streamlit/: config.toml
context/: Prompts.md  Role.md  Rules.md
context/prompts/: _example.md  cve-volume-top5.md  mac-risk-summarizer.md  prompt-builder.md
context/prompts/_example/: _example.md  prompt.md  script.py
context/prompts/cve-volume-top5/: cve-volume-top5.md  cve-volume-top5.py  script.py
context/prompts/mac-risk-summarizer/: mac-risk-summarizer.md  prompt.md
context/prompts/prompt-builder/: prompt-builder.md  prompt-builder.py  prompt.md  script.py
